# ECS

./: .gitignore  CMakeLists.txt  compile.sh
.github/workflows/: unit_tests.yaml  update_subrepo.yaml
include/: Entity.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp
src/: Registry.cpp
tests/unit_tests/: CMakeLists.txt  registry.cpp  sparse_array.cpp
